--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
       text-decoration:underline;
     }
   </style>
+  <meta name="google-site-verification" content="UQqN7qwSyg9KufZL6QRNKM5mboqUKMss2hTebd3r45c" />
 </head>
 
 <body>
