--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     <br>
     <a href="https://sabeegrewal.com/">Sabee Grewal</a>, <a href="https://vishnuiyer.org/">Vishnu Iyer</a>, William Kretschmer, <a href="https://daniel-you-liang.github.io/">Daniel Liang</a>
     <br>
-    To appear in TQC 2024
+    Presented at the 19th Conference on the Theory of Quantum Computation, Communication and Cryptography (TQC 2024)
     <br>
     <a href="https://arxiv.org/abs/2404.00126">[arXiv]</a>
   </li>
@@ -269,7 +269,7 @@
 </div>
 
 <div id="updated">
-Last updated: September 30, 2024
+Last updated: October 29, 2024
 </div>
 
 </body>
