Quantum-computable OWFs

--- a/index.html
+++ b/index.html
@@ -64,6 +64,14 @@
   <ol reversed>
 
   <li>
+    <b>Quantum-Computable One-Way Functions without One-Way Functions</b> 
+    <br>
+    William Kretschmer, <a href="https://cs-people.bu.edu/luowenq/">Luowen Qian</a>, <a href="https://www.avishaytal.org/">Avishay Tal</a>
+    <br>
+    <a href="https://arxiv.org/abs/2411.02554">[arXiv]</a>
+  </li>
+
+  <li>
     <b>Agnostic Tomography of Stabilizer Product States</b> 
     <br>
     <a href="https://sabeegrewal.com/">Sabee Grewal</a>, <a href="https://vishnuiyer.org/">Vishnu Iyer</a>, William Kretschmer, <a href="https://daniel-you-liang.github.io/">Daniel Liang</a>
@@ -269,7 +277,7 @@
 </div>
 
 <div id="updated">
-Last updated: October 29, 2024
+Last updated: November 5, 2024
 </div>
 
 </body>
