Update Luowen's address

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
   <li>
     <b>Quantum-Computable One-Way Functions without One-Way Functions</b> 
     <br>
-    William Kretschmer, <a href="https://cs-people.bu.edu/luowenq/">Luowen Qian</a>, <a href="https://www.avishaytal.org/">Avishay Tal</a>
+    William Kretschmer, <a href="https://qcry.pt/">Luowen Qian</a>, <a href="https://www.avishaytal.org/">Avishay Tal</a>
     <br>
     <a href="https://arxiv.org/abs/2411.02554">[arXiv]</a>
   </li>
@@ -144,7 +144,7 @@
   <li>
     <b>Quantum Cryptography in Algorithmica</b> 
     <br>
-    William Kretschmer, <a href="https://cs-people.bu.edu/luowenq/">Luowen Qian</a>, <a href="https://makrandsinha.github.io/">Makrand Sinha</a>, <a href="https://www.avishaytal.org/">Avishay Tal</a>
+    William Kretschmer, <a href="https://qcry.pt/">Luowen Qian</a>, <a href="https://makrandsinha.github.io/">Makrand Sinha</a>, <a href="https://www.avishaytal.org/">Avishay Tal</a>
     <br>
     Presented at the 26th Annual Conference on Quantum Information Processing (QIP 2023)
     <br>
