--- a/index.html
+++ b/index.html
@@ -64,6 +64,14 @@
   <ol reversed>
 
   <li>
+    <b>Learning the closest product state</b> 
+    <br>
+    <a href="https://www.aineshbakshi.com//">Ainesh Bakshi</a>, <a href="https://www.johnbostanci.com/">John Bostanci</a>, William Kretschmer, <a href="https://people.eecs.berkeley.edu/~landau/index.htm">Zeph Landau</a>, <a href="https://jerryzli.github.io/">Jerry Li</a>, <a href="https://aliu42.github.io/">Allen Liu</a>, <a href="https://www.cs.cmu.edu/~odonnell/">Ryan O'Donnell</a>, <a href="https://ewintang.com/">Ewin Tang</a>
+    <br>
+    <a href="https://arxiv.org/abs/2411.04283">[arXiv]</a>
+  </li>
+
+  <li>
     <b>Quantum-Computable One-Way Functions without One-Way Functions</b> 
     <br>
     William Kretschmer, <a href="https://qcry.pt/">Luowen Qian</a>, <a href="https://www.avishaytal.org/">Avishay Tal</a>
@@ -277,7 +285,7 @@
 </div>
 
 <div id="updated">
-Last updated: November 5, 2024
+Last updated: November 8, 2024
 </div>
 
 </body>
