Updates for QIP 2025

--- a/index.html
+++ b/index.html
@@ -68,6 +68,8 @@
     <br>
     <a href="https://www.aineshbakshi.com//">Ainesh Bakshi</a>, <a href="https://www.johnbostanci.com/">John Bostanci</a>, William Kretschmer, <a href="https://people.eecs.berkeley.edu/~landau/index.htm">Zeph Landau</a>, <a href="https://jerryzli.github.io/">Jerry Li</a>, <a href="https://aliu42.github.io/">Allen Liu</a>, <a href="https://www.cs.cmu.edu/~odonnell/">Ryan O'Donnell</a>, <a href="https://ewintang.com/">Ewin Tang</a>
     <br>
+    To appear in QIP 2025 (short plenary talk)
+    <br>
     <a href="https://arxiv.org/abs/2411.04283">[arXiv]</a>
   </li>
 
@@ -75,6 +77,8 @@
     <b>Quantum-Computable One-Way Functions without One-Way Functions</b> 
     <br>
     William Kretschmer, <a href="https://qcry.pt/">Luowen Qian</a>, <a href="https://www.avishaytal.org/">Avishay Tal</a>
+    <br>
+    To appear in QIP 2025
     <br>
     <a href="https://arxiv.org/abs/2411.02554">[arXiv]</a>
   </li>
@@ -285,7 +289,7 @@
 </div>
 
 <div id="updated">
-Last updated: November 8, 2024
+Last updated: December 6, 2024
 </div>
 
 </body>
