SICOMP version for symmetries paper

--- a/index.html
+++ b/index.html
@@ -228,7 +228,9 @@
     <br>
     <i>Proceedings of the IEEE 61st Annual Symposium on Foundations of Computer Science (FOCS 2020)</i>, pp. 649&ndash;660 (2020)
     <br>
-    <a href="https://arxiv.org/abs/2006.12760">[arXiv]</a> <a href="https://doi.org/10.1109/FOCS46700.2020.00066">[FOCS 2020]</a>
+    <i>SIAM Journal on Computing</i> 53:6, pp. FOCS20-368&ndash;FOCS20-415 (2024)
+    <br>
+    <a href="https://arxiv.org/abs/2006.12760">[arXiv]</a> <a href="https://doi.org/10.1109/FOCS46700.2020.00066">[FOCS 2020]</a> <a href="https://doi.org/10.1137/23M1573975">[Journal]</a>
   </li>
 
   <li>
@@ -289,7 +291,7 @@
 </div>
 
 <div id="updated">
-Last updated: December 6, 2024
+Last updated: December 18, 2024
 </div>
 
 </body>
