--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
     <br>
     <i>Proceedings of the IEEE 61st Annual Symposium on Foundations of Computer Science (FOCS 2020)</i>, pp. 649&ndash;660 (2020)
     <br>
-    <i>SIAM Journal on Computing</i> 53:6, pp. FOCS20-368&ndash;FOCS20-415 (2024)
+    <i>SIAM Journal on Computing</i> <b>53</b>(6), pp. FOCS20-368&ndash;FOCS20-415 (2024)
     <br>
     <a href="https://arxiv.org/abs/2006.12760">[arXiv]</a> <a href="https://doi.org/10.1109/FOCS46700.2020.00066">[FOCS 2020]</a> <a href="https://doi.org/10.1137/23M1573975">[Journal]</a>
   </li>
@@ -238,7 +238,7 @@
     <br>
     William Kretschmer
     <br>
-    <i>ACM Transactions on Computation Theory</i> 13:1 (2021)
+    <i>ACM Transactions on Computation Theory</i> <b>13</b>(1) (2021)
     <br>
     <a href="https://arxiv.org/abs/1907.06731">[arXiv]</a> <a href="https://doi.org/10.1145/3434385">[Journal]</a>
   </li>
@@ -283,7 +283,7 @@
     <br>
     William Kretschmer
     <br>
-    <i>Game and Puzzle Design</i> 3:2, pp. 15&ndash;26 (2017)
+    <i>Game and Puzzle Design</i> <b>3</b>(2), pp. 15&ndash;26 (2017)
     <br>
     <a href="http://gapdjournal.com/issues/issue-3-2/gapd-3-2-03-groups-sample.pdf">[Journal]</a>
   </li>
