--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <br>
     <a href="https://www.aineshbakshi.com//">Ainesh Bakshi</a>, <a href="https://www.johnbostanci.com/">John Bostanci</a>, William Kretschmer, <a href="https://people.eecs.berkeley.edu/~landau/index.htm">Zeph Landau</a>, <a href="https://jerryzli.github.io/">Jerry Li</a>, <a href="https://aliu42.github.io/">Allen Liu</a>, <a href="https://www.cs.cmu.edu/~odonnell/">Ryan O'Donnell</a>, <a href="https://ewintang.com/">Ewin Tang</a>
     <br>
-    To appear in QIP 2025 (short plenary talk)
+    To appear in QIP 2025 (short plenary talk) and STOC 2025
     <br>
     <a href="https://arxiv.org/abs/2411.04283">[arXiv]</a>
   </li>
@@ -78,7 +78,7 @@
     <br>
     William Kretschmer, <a href="https://qcry.pt/">Luowen Qian</a>, <a href="https://www.avishaytal.org/">Avishay Tal</a>
     <br>
-    To appear in QIP 2025
+    To appear in QIP 2025 and STOC 2025
     <br>
     <a href="https://arxiv.org/abs/2411.02554">[arXiv]</a>
   </li>
@@ -291,7 +291,7 @@
 </div>
 
 <div id="updated">
-Last updated: December 18, 2024
+Last updated: January 31, 2024
 </div>
 
 </body>
