--- a/index.html
+++ b/index.html
@@ -64,15 +64,15 @@
   <ol reversed>
 
   <li>
-    <b>Learning the closest product state</b> 
+    <b>Learning the Closest Product State</b> 
     <br>
     <a href="https://www.aineshbakshi.com//">Ainesh Bakshi</a>, <a href="https://www.johnbostanci.com/">John Bostanci</a>, William Kretschmer, <a href="https://people.eecs.berkeley.edu/~landau/index.htm">Zeph Landau</a>, <a href="https://jerryzli.github.io/">Jerry Li</a>, <a href="https://aliu42.github.io/">Allen Liu</a>, <a href="https://www.cs.cmu.edu/~odonnell/">Ryan O'Donnell</a>, <a href="https://ewintang.com/">Ewin Tang</a>
     <br>
     Presented at the 28th Annual Conference on Quantum Information Processing (QIP 2025) as a short plenary talk
     <br>
-    To appear in STOC 2025
+    <i>Proceedings of the 57th Annual ACM Symposium on Theory of Computing (STOC 2025)</i>, pp. 1212&ndash;1221 (2025)
     <br>
-    <a href="https://arxiv.org/abs/2411.04283">[arXiv]</a>
+    <a href="https://arxiv.org/abs/2411.04283">[arXiv]</a> <a href="https://doi.org/10.1145/3717823.3718207">[STOC 2025]</a>
   </li>
 
   <li>
@@ -82,9 +82,9 @@
     <br>
     Presented at the 28th Annual Conference on Quantum Information Processing (QIP 2025) 
     <br>
-    To appear in STOC 2025
+    <i>Proceedings of the 57th Annual ACM Symposium on Theory of Computing (STOC 2025)</i>, pp. 189&ndash;200 (2025)
     <br>
-    <a href="https://arxiv.org/abs/2411.02554">[arXiv]</a>
+    <a href="https://arxiv.org/abs/2411.02554">[arXiv]</a> <a href="https://doi.org/10.1145/3717823.3718144">[STOC 2025]</a>
   </li>
 
   <li>
@@ -295,7 +295,7 @@
 </div>
 
 <div id="updated">
-Last updated: April 19, 2024
+Last updated: June 30, 2024
 </div>
 
 </body>
