--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <div id="about">
   <img src="me.jpg" alt="William Kretschmer" style="float:right; width:150px; padding:1em"/>
   <h2 align="left">About</h2>
-  <p>I am a Quantum Postdoctoral Fellow at the Simons Institute for the Theory of Computing. Previously, I did my PhD at UT Austin, where I was fortunate to have <a href="https://scottaaronson.com/">Scott Aaronson</a> as my PhD advisor. Before that, I was an undergrad in Mathematics with Computer Science at MIT.</p>
+  <p>I am an Assistant Professor in the <a href="https://www.cs.utexas.edu/">Department of Computer Science</a> at UT Austin. Previously, I was a Quantum Postdoctoral Fellow at the Simons Institute for the Theory of Computing. Before that, I did my PhD at UT Austin, where I was fortunate to have <a href="https://scottaaronson.com/">Scott Aaronson</a> as my PhD advisor. I was an undergrad in Mathematics with Computer Science at MIT.</p>
 
   <p>My research lies broadly in quantum computational complexity theory. Much of my work focuses on (limitations of) quantum algorithms and (in)ability to apply classical algorithmic techniques in quantum computation. Some common topics of study in my research include query complexity, structural complexity, pseudorandom quantum states, learning theory, and the stabilizer formalism, especially as they apply to computational problems involving quantum states and unitary transformations.
   </p>
@@ -50,7 +50,7 @@
   <h2 align="left">Contact</h2>
   <b>Email:</b> (first 7 letters of last name, all lowercase)@berkeley.edu
   <br>
-  <b>Office:</b> 314 Calvin Lab
+  <b>Office:</b> GDC 4.404
 </div>
 
 <div id="scholar">
@@ -295,7 +295,7 @@
 </div>
 
 <div id="updated">
-Last updated: June 30, 2024
+Last updated: August 16, 2025
 </div>
 
 </body>
