Update email to cs.utexas.edu
It works now!

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
 <div id="contact">
   <h2 align="left">Contact</h2>
-  <b>Email:</b> (first 7 letters of last name, all lowercase)@berkeley.edu
+  <b>Email:</b> (first 7 letters of last name, all lowercase)@cs.utexas.edu
   <br>
   <b>Office:</b> GDC 4.404
 </div>
