Fix broken twistypuzzles link

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
   <p>Interested in learning more about my work? Check out this <a href="https://www.quantamagazine.org/cryptographers-discover-a-new-foundation-for-quantum-secrecy-20240603">Quanta Magazine article</a> about my (and others') research on quantum state complexity.</p>
 
-  <p>On the side, I have a large interest in combination puzzles, especially Rubik's-type "twisty puzzles". Some of my non-CS theory papers below grew out of this interest. I have also designed more than a dozen unique 3D-printed twisty puzzles, all of which have been shared on the <a href="https://www.twistypuzzles.com/forum/">Twisty Puzzles forum</a>, and most of which can be found in the <a href="http://twistypuzzles.com/cgi-bin/pdb-search.cgi?act=inv&key=297">Twisty Puzzles museum</a>. Many of my designs are also <a href="http://twistypuzzles.com/forum/viewtopic.php?p=365854#p365854">available for download</a>. </p>
+  <p>On the side, I have a large interest in combination puzzles, especially Rubik's-type "twisty puzzles". Some of my non-CS theory papers below grew out of this interest. I have also designed more than a dozen unique 3D-printed twisty puzzles, all of which have been shared on the <a href="https://www.twistypuzzles.com/forum/">Twisty Puzzles forum</a>, and most of which can be found in the <a href="https://www.twistypuzzles.com/app/museum/museum_search.php?function=show_puzzles&numpuzzles=20&page=1&inventor=297">Twisty Puzzles museum</a>. Many of my designs are also <a href="http://twistypuzzles.com/forum/viewtopic.php?p=365854#p365854">available for download</a>. </p>
 </div> 
 
 <div id="contact">
@@ -295,7 +295,7 @@
 </div>
 
 <div id="updated">
-Last updated: August 16, 2025
+Last updated: August 31, 2025
 </div>
 
 </body>
