--- a/index.html
+++ b/index.html
@@ -64,6 +64,14 @@
   <ol reversed>
 
   <li>
+    <b>Demonstrating an unconditional separation between quantum and classical information resources</b> 
+    <br>
+    William Kretschmer, <a href="https://sabeegrewal.com/">Sabee Grewal</a>, <a href="https://mdecross.github.io/">Matthew DeCross</a>, <a href="https://ultracold.physics.berkeley.edu/justin-gerber">Justin A. Gerber</a>, <a href="https://scholar.google.com/citations?user=aCPhsYoAAAAJ&hl=en">Kevin Gilmore</a>, Dan Gresh, <a href="https://nickrhj.github.io/">Nicholas Hunter-Jones</a>, Karl Mayer, <a href="https://scholar.google.com/citations?user=oBGSuwIAAAAJ&hl=en">Brian Neyenhuis</a>, <a href="https://scholar.google.com/citations?user=wwYvtwEAAAAJ&hl=en">David Hayes</a>, <a href="https://www.scottaaronson.com/">Scott Aaronson</a>
+    <br>
+    <a href="https://arxiv.org/abs/2509.07255">[arXiv]</a>
+  </li>
+
+  <li>
     <b>Learning the Closest Product State</b> 
     <br>
     <a href="https://www.aineshbakshi.com//">Ainesh Bakshi</a>, <a href="https://www.johnbostanci.com/">John Bostanci</a>, William Kretschmer, <a href="https://people.eecs.berkeley.edu/~landau/index.htm">Zeph Landau</a>, <a href="https://jerryzli.github.io/">Jerry Li</a>, <a href="https://aliu42.github.io/">Allen Liu</a>, <a href="https://www.cs.cmu.edu/~odonnell/">Ryan O'Donnell</a>, <a href="https://ewintang.com/">Ewin Tang</a>
@@ -295,7 +303,7 @@
 </div>
 
 <div id="updated">
-Last updated: August 31, 2025
+Last updated: September 9, 2025
 </div>
 
 </body>
