Info for prospective students

--- a/index.html
+++ b/index.html
@@ -46,6 +46,13 @@
   <p>On the side, I have a large interest in combination puzzles, especially Rubik's-type "twisty puzzles". Some of my non-CS theory papers below grew out of this interest. I have also designed more than a dozen unique 3D-printed twisty puzzles, all of which have been shared on the <a href="https://www.twistypuzzles.com/forum/">Twisty Puzzles forum</a>, and most of which can be found in the <a href="https://www.twistypuzzles.com/app/museum/museum_search.php?function=show_puzzles&numpuzzles=20&page=1&inventor=297">Twisty Puzzles museum</a>. Many of my designs are also <a href="http://twistypuzzles.com/forum/viewtopic.php?p=365854#p365854">available for download</a>. </p>
 </div> 
 
+<div id="prospective_students">
+  <h2 align="left">Prospective PhD Students</h2>
+  <p>
+  I am recruiting PhD students in Computer Science starting in Fall 2026. Those interested should complete the application <a href="https://www.cs.utexas.edu/graduate-program/prospective-students/apply">here</a> by December 15, 2025. Prospective students can email me before submitting an application, but due to the high volume of such emails, I cannot respond to them all. Admissions are strictly through the department-wide application process.
+  </p>
+</div>
+
 <div id="contact">
   <h2 align="left">Contact</h2>
   <b>Email:</b> (first 7 letters of last name, all lowercase)@cs.utexas.edu
@@ -303,7 +310,7 @@
 </div>
 
 <div id="updated">
-Last updated: September 9, 2025
+Last updated: September 15, 2025
 </div>
 
 </body>
