Update research summary

--- a/index.html
+++ b/index.html
@@ -38,8 +38,7 @@
   <h2 align="left">About</h2>
   <p>I am an Assistant Professor in the <a href="https://www.cs.utexas.edu/">Department of Computer Science</a> at UT Austin. Previously, I was a Quantum Postdoctoral Fellow at the Simons Institute for the Theory of Computing. Before that, I did my PhD at UT Austin, where I was fortunate to have <a href="https://scottaaronson.com/">Scott Aaronson</a> as my PhD advisor. I was an undergrad in Mathematics with Computer Science at MIT.</p>
 
-  <p>My research lies broadly in quantum computational complexity theory. Much of my work focuses on (limitations of) quantum algorithms and (in)ability to apply classical algorithmic techniques in quantum computation. Some common topics of study in my research include query complexity, structural complexity, pseudorandom quantum states, learning theory, and the stabilizer formalism, especially as they apply to computational problems involving quantum states and unitary transformations.
-  </p>
+  <p>My research lies broadly in quantum information, with connections to complexity theory, cryptography, and learning. I am especially interested in understanding computational problems that involve operation on quantum inputs.</p>
 
   <p>Interested in learning more about my work? Check out this <a href="https://www.quantamagazine.org/cryptographers-discover-a-new-foundation-for-quantum-secrecy-20240603">Quanta Magazine article</a> about my (and others') research on quantum state complexity.</p>
 
@@ -310,7 +309,7 @@
 </div>
 
 <div id="updated">
-Last updated: September 15, 2025
+Last updated: September 16, 2025
 </div>
 
 </body>
