Unentanglement paper and titlecase consistency

--- a/index.html
+++ b/index.html
@@ -70,7 +70,16 @@
   <ol reversed>
 
   <li>
-    <b>Demonstrating an unconditional separation between quantum and classical information resources</b> 
+    <b>Unentanglement and Post-Measurement Branching in Quantum Interactive Proofs</b> 
+    <br>
+    <a href="https://sabeegrewal.com/">Sabee Grewal</a>, William Kretschmer
+    <br>
+    <a href="https://arxiv.org/abs/2509.15319">[arXiv]</a>
+  </li>
+
+
+  <li>
+    <b>Demonstrating an Unconditional Separation between Quantum and Classical Information Resources</b> 
     <br>
     William Kretschmer, <a href="https://sabeegrewal.com/">Sabee Grewal</a>, <a href="https://mdecross.github.io/">Matthew DeCross</a>, <a href="https://ultracold.physics.berkeley.edu/justin-gerber">Justin A. Gerber</a>, <a href="https://scholar.google.com/citations?user=aCPhsYoAAAAJ&hl=en">Kevin Gilmore</a>, Dan Gresh, <a href="https://nickrhj.github.io/">Nicholas Hunter-Jones</a>, Karl Mayer, <a href="https://scholar.google.com/citations?user=oBGSuwIAAAAJ&hl=en">Brian Neyenhuis</a>, <a href="https://scholar.google.com/citations?user=wwYvtwEAAAAJ&hl=en">David Hayes</a>, <a href="https://www.scottaaronson.com/">Scott Aaronson</a>
     <br>
@@ -238,7 +247,7 @@
   </li>
 
   <li>
-    <b>Symmetries, graph properties, and quantum speedups</b> 
+    <b>Symmetries, Graph Properties, and Quantum Speedups</b> 
     <br>
     <a href="https://cs.uwaterloo.ca/~s4bendav/">Shalev Ben-David</a>, <a href="https://www.cs.umd.edu/~amchilds/">Andrew M. Childs</a>, <a href="http://gilyen.hu/">Andr&aacute;s Gily&eacute;n</a>, William Kretschmer, <a href="https://sites.google.com/site/supartha/">Supartha Podder</a>, <a href="https://daochenw.github.io/">Daochen Wang</a>
     <br>
@@ -309,7 +318,7 @@
 </div>
 
 <div id="updated">
-Last updated: September 20, 2025
+Last updated: September 22, 2025
 </div>
 
 </body>
