ECCC posting for unentanglement

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     <br>
     <a href="https://sabeegrewal.com/">Sabee Grewal</a>, William Kretschmer
     <br>
-    <a href="https://arxiv.org/abs/2509.15319">[arXiv]</a>
+    <a href="https://arxiv.org/abs/2509.15319">[arXiv]</a> <a href="https://eccc.weizmann.ac.il/report/2025/145/">[ECCC]</a>
   </li>
 
 
@@ -318,7 +318,7 @@
 </div>
 
 <div id="updated">
-Last updated: September 22, 2025
+Last updated: October 14, 2025
 </div>
 
 </body>
