Efficient learning journal

--- a/index.html
+++ b/index.html
@@ -135,7 +135,9 @@
     <br>
     Presented at the 27th Annual Conference on Quantum Information Processing (QIP 2024)
     <br>
-    <a href="https://arxiv.org/abs/2305.13409">[arXiv]</a>
+    <i>Quantum</i> <b>9</b>, 1907 (2025)
+    <br>
+    <a href="https://arxiv.org/abs/2305.13409">[arXiv]</a> <a href="https://quantum-journal.org/papers/q-2025-11-06-1907/">[Journal]</a>
   </li>
 
   <li>
@@ -318,7 +320,7 @@
 </div>
 
 <div id="updated">
-Last updated: October 14, 2025
+Last updated: November 6, 2025
 </div>
 
 </body>
