--- a/index.html
+++ b/index.html
@@ -52,6 +52,16 @@
   </p>
 </div>
 
+<div id="teaching">
+  <h2 align="left">Teaching</h2>
+  <ul>
+    <li>
+      <a href="https://utexas.instructure.com/courses/1441340">Spring 2026: CS 395T Quantum Protocols</a>
+    </li>
+  </ul>
+</div>
+
+
 <div id="contact">
   <h2 align="left">Contact</h2>
   <b>Email:</b> (first 7 letters of last name, all lowercase)@cs.utexas.edu
@@ -320,7 +330,7 @@
 </div>
 
 <div id="updated">
-Last updated: November 6, 2025
+Last updated: January 8, 2026
 </div>
 
 </body>
